--- a/index.html
+++ b/index.html
@@ -1,49 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="restarauntViewer">
+<html ng-app="restaurantViewer">
 
   <head>
     <link data-require="bootstrap@*" data-semver="3.3.1" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
-     <script data-require="bootstrap@*" data-semver="3.3.1" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script data-require="bootstrap@*" data-semver="3.3.1" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script data-require="angular.js@*" data-semver="1.4.0-beta.4" src="https://code.angularjs.org/1.4.0-beta.4/angular.js"></script>
+    <script data-require="angular-route@*" data-semver="1.2.14" src="http://code.angularjs.org/1.2.14/angular-route.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="app.js"></script>
+    <script src="RestaurantController.js"></script>
   </head>
 
-  <body ng-controller="MainController">
-    <h1>{{welcome}}</h1>
-    <div>{{error}}</div>
-    <form name="findRestaraunts" ng-submit="search(distance, latitude, longitude)">
-      <input type="search" placeholder="latitude" ng-model="latitude" />
-      <input type="search" placeholder="longitude" ng-model="longitude" />
-      <input type="search" placeholder="distance" ng-model="distance" />
-      <input type="submit" class="form-control" value="Search" />
-    </form>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Phone</th>
-          <th>City</th>
-          <th>Address</th>
-          <th>State</th>
-          <th>Zip</th>
-          <th>Happy Hour Start</th>
-          <th>Happy Hour End</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="restaraunt in restaraunts">
-          <td>{{restaraunt.name}}</td>
-          <td>{{restaraunt.phone}}</td>
-          <td>{{restaraunt.city}}</td>
-          <td>{{restaraunt.address}}</td>
-          <td>{{restaraunt.stateProvince}}</td>
-          <td>{{restaraunt.zip}}</td>
-          <td>{{restaraunt.happyHourStart | date}}</td>
-          <td>{{restaraunt.happyHourEnd | date}} </td>
-        </tr>
-      </tbody>
-    </table>
+  <body>
+    <div ng-view></div>
   </body>
-
 </html>
