Separated the search and results page into separate pages, added routing, and split into two controllers

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script data-require="angular-route@*" data-semver="1.2.14" src="http://code.angularjs.org/1.2.14/angular-route.js"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
+    <script src="MainController.js"></script>
     <script src="RestaurantController.js"></script>
   </head>
 
   <body>
+    <h1>Welcome to Nachos Restaraunt Finder!</h1>
     <div ng-view></div>
   </body>
 </html>
