--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script data-require="bootstrap@*" data-semver="3.3.1" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script data-require="angular.js@*" data-semver="1.4.0-beta.4" src="https://code.angularjs.org/1.4.0-beta.4/angular.js"></script>
     <script data-require="angular-route@*" data-semver="1.2.14" src="http://code.angularjs.org/1.2.14/angular-route.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdVvi7R_sWEJoEVk3cjSiigIewKYZcQ9I"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
     <script src="MainController.js"></script>
